Ajust somethings :art:

--- a/css/skeleton-dark.css
+++ b/css/skeleton-dark.css
@@ -30,6 +30,11 @@
 *
 */
 
+*{
+  margin: 0;
+  padding: 0;
+}
+
 
 /* Grid
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -52,6 +57,7 @@
   border: 5px solid;
   color: #5A4B81;
   width: 35%;
+  margin-top: 20px;
   margin-bottom: 5px;
 }
 
