--- a/css/skeleton-dark.css
+++ b/css/skeleton-dark.css
@@ -57,8 +57,8 @@
   border: 5px solid;
   color: #5A4B81;
   width: 35%;
-  margin-top: 25px;
-  margin-bottom: 5px;
+  margin-top: 2%;
+  margin-bottom: 2%;
 }
 
 /* For devices larger than 400px */
