--- a/css/skeleton-dark.css
+++ b/css/skeleton-dark.css
@@ -118,7 +118,6 @@ p {
   font-size: 15px;
 }
 
-
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 a {
@@ -184,3 +183,14 @@ hr {
   border-width: 0;
   border-top: 1px solid #E1E1E6; }
 
+  .profile-description {
+    display: flex;
+    align-items: center;
+  }
+
+  .profile-description img {
+    width: 30px;
+    margin-right: 10px;
+    padding-left: 45px;
+    margin-bottom: 7px;
+  }
