--- a/css/brands.css
+++ b/css/brands.css
@@ -18,7 +18,6 @@
 * 12/29/2014
 */
 
-
 /* Table of contents
 ––––––––––––––––––––––––––––––––––––––––––––––––––
 
@@ -26,7 +25,6 @@
 - Brand Styles
 
 */
-
 
 /* Buttons
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -48,20 +46,23 @@ button {
   background-color: transparent;
   border-radius: 8px;
   cursor: pointer;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 button:hover,
 .button:focus {
   color: #333;
   border-color: #888;
-  outline: 0; }
+  outline: 0;
+}
 .button.button-primary {
-  color: #FFF;
-  filter: brightness(90%) }
+  color: #fff;
+  filter: brightness(90%);
+}
 .button.button-primary:hover,
 .button.button-primary:focus {
-  color: #FFF;
-  filter: brightness(90%) }
-
+  color: #fff;
+  filter: brightness(90%);
+}
 
 /* Brand Icons
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -73,109 +74,95 @@ button:hover,
   height: 20px;
 }
 
-
 /* Brand Styles
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 /* Discord */
 .button.button-discord {
-  color: #FFFFFF;
-  background-color: #7289DA }
+  color: #ffffff;
+  background-color: #7289da;
+}
 .button.button-discord:hover,
 .button.button-discord:focus {
-  filter: brightness(90%) }
+  filter: brightness(90%);
+}
 
 /* Facebook */
 .button.button-facebook {
-  color: #FFFFFF;
-  background-color: #1877f2 }
+  color: #ffffff;
+  background-color: #1877f2;
+}
 .button.button-facebook:hover,
 .button.button-facebook:focus {
-  filter: brightness(90%) }
+  filter: brightness(90%);
+}
 
 /* Github */
 .button.button-github {
-  color: #FFFFFF;
-  background-color: #24292e }
+  color: #ffffff;
+  background-color: #24292e;
+}
 .button.button-github:hover,
 .button.button-github:focus {
-  filter: brightness(90%) }
+  filter: brightness(90%);
+}
 
 /* Instagram */
 .button.button-instagram {
-  color: #FFFFFF;
-  background-image: linear-gradient(-135deg,#1400c8,#b900b4,#f50000) }
+  color: #ffffff;
+  background-image: linear-gradient(-135deg, #1400c8, #b900b4, #f50000);
+}
 .button.button-instagram:hover,
 .button.button-instagram:focus {
-  filter: brightness(90%) }
+  filter: brightness(90%);
+}
 
 /* LinkedIn */
 .button.button-linkedin {
-  color: #FFFFFF;
-  background-color: #0A66C2 }
+  color: #ffffff;
+  background-color: #0a66c2;
+}
 .button.button-linkedin:hover,
 .button.button-linkedin:focus {
-  filter: brightness(90%) }
+  filter: brightness(90%);
+}
 
 /* Twitch */
 .button.button-twitch {
-  color: #FFFFFF;
-  background-color: #9146ff }
+  color: #ffffff;
+  background-color: #9146ff;
+}
 .button.button-twitch:hover,
 .button.button-twitch:focus {
-  filter: brightness(90%) }
+  filter: brightness(90%);
+}
 
 /* Twitter */
 .button.button-twitter {
-  color: #FFFFFF;
-  background-color: #1DA1F2 }
+  color: #ffffff;
+  background-color: #1da1f2;
+}
 .button.button-twitter:hover,
 .button.button-twitter:focus {
-  filter: brightness(90%) }
+  filter: brightness(90%);
+}
 
 /* YouTube */
 .button.button-youtube {
-  color: #FFFFFF;
-  background-color: #FF0000 }
+  color: #ffffff;
+  background-color: #ff0000;
+}
 .button.button-youtube:hover,
 .button.button-youtube:focus {
-  filter: brightness(90%) }
+  filter: brightness(90%);
+}
 
 /* Rocketseat */
 .button.button-rocketseat {
-  color: #FFFFFF;
-  background-color: #8257E6 }
+  color: #ffffff;
+  background-color: #8257e6;
+}
 .button.button-rocketseat:hover,
 .button.button-rocketseat:focus {
-  filter: brightness(90%) }
-
-      /* DoWhile */
-.button.button-dowhile-2021 {
-  color: #FFFFFF;
-  background-color: black
+  filter: brightness(90%);
 }
-.button.button-dowhile-2021:hover,
-.button.button-dowhile-2021:focus {
-  filter: brightness(90%) }
-
-  .icon-do-while-2021 {
-    width: 250px;
-    height: 30px;
-    padding-top: 9px;
-  }
-
-
-      /* NLW */
-.button.button-nlw-heat {
-  color: #FFFFFF;
-  background-color: black
-}
-.button.button-nlw-heat:hover,
-.button.button-nlw-heat:focus {
-  filter: brightness(90%) }
-
-  .icon-nlw-heat {
-    width: 250px;
-    height: 30px;
-    padding-top: 9px;
-  }
